objects/PartnerPortalDocument__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Documents for partner portal</description>
    <fields>
        <fullName>Content_Id__c</fullName>
        <label>Content Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <label>Public URL</label>
        <type>Url</type>
    </fields>
    <label>Partner Portal Document</label>
</CustomObject>